# MRHLG-Swarm-Engine

./: ARCHITECTURE.md  Cargo.toml  README.md  astro.config.mjs  mhlg_cli.py  package.json  process.py  requirements.txt
src/backend/: main.rs
src/components/: MosaicGrid.astro
src/layouts/: Layout.astro
src/pages/: index.astro
